--- a/config/device_mappings.json
+++ b/config/device_mappings.json
@@ -105,6 +105,18 @@
         }
     },
 
+    "pressure_PSI": {
+        "device_type": "sensor",
+        "object_suffix": "P",
+        "config": {
+            "device_class": "pressure",
+            "name": "Pressure",
+            "unit_of_measurement": "PSI",
+            "value_template": "{{ value|float }}",
+            "state_class": "measurement"
+        }
+    },
+
     "wind_speed_km_h": {
         "device_type": "sensor",
         "object_suffix": "WS",
@@ -426,6 +438,28 @@
         }
     },
     "power0_W": {
+        "device_type": "sensor",
+        "object_suffix": "watts",
+        "config": {
+            "device_class": "power",
+            "name": "Power",
+            "unit_of_measurement": "W",
+            "value_template": "{{ value|float }}",
+            "state_class": "measurement"
+        }
+    },
+    "power1_W": {
+        "device_type": "sensor",
+        "object_suffix": "watts",
+        "config": {
+            "device_class": "power",
+            "name": "Power",
+            "unit_of_measurement": "W",
+            "value_template": "{{ value|float }}",
+            "state_class": "measurement"
+        }
+    },
+    "power2_W": {
         "device_type": "sensor",
         "object_suffix": "watts",
         "config": {
