--- a/rtl_433_discoverandsubmit/config/device_mappings.json
+++ b/rtl_433_discoverandsubmit/config/device_mappings.json
@@ -459,6 +459,17 @@
             "unit_of_measurement": "gal"
         }
     },
+    "Consumption": {
+        "device_type": "sensor",
+        "object_suffix": "consumption",
+        "config": {
+            "name": "SCMplus Consumption Value",
+            "value_template": "{{ value|int }}",
+            "device_class": "gas",
+            "unit_of_measurement": "ccf",
+            "state_class": "total_increasing"
+        }
+    },
     "power0_W": {
         "device_type": "sensor",
         "object_suffix": "watts",
