Enable config flow for UI integration

--- a/custom_components/rtl_433_discoverandsubmit/manifest.json
+++ b/custom_components/rtl_433_discoverandsubmit/manifest.json
@@ -5,5 +5,6 @@
     "documentation": "https://example.com",
     "dependencies": [],
     "codeowners": [],
-    "requirements": []
+    "requirements": [],
+    "config_flow": true
 }
