Add paho-mqtt requirement to HA manifest

--- a/custom_components/rtl_433_discoverandsubmit/manifest.json
+++ b/custom_components/rtl_433_discoverandsubmit/manifest.json
@@ -5,6 +5,8 @@
     "documentation": "https://example.com",
     "dependencies": [],
     "codeowners": [],
-    "requirements": [],
+    "requirements": [
+        "paho-mqtt"
+    ],
     "config_flow": true
 }
